tests/src/frontend/typechecking/invalid/async_mut_2.sk
class Foo() {
  async fun no(() -> void): ^void {
    void
  }
}
